--- a/public/static/locales/en/translations.json
+++ b/public/static/locales/en/translations.json
@@ -11,6 +11,7 @@
   "DECIMAL": "{{number,intlDecimal}}",
   "DECIMAL2": "{{number,intlDecimal2}}",
   "MyProfile": "My Profile",
+  "Toate Concediile": "All Holidays",
   "Forbidden": "Not allowed to see this page!",
   "NavBar": {
     "Dashboard": "Dashboard",
