--- a/public/static/locales/ro/translations.json
+++ b/public/static/locales/ro/translations.json
@@ -3,6 +3,7 @@
   "RowsOf": "din",
   "RowsPerPage": "Randuri pe pagina",
   "MyProfile": "Profilul meu",
+  "Toate Concediile": "Toate Concediile",
   "Forbidden": "Nu aveti dreptul sa vedeti aceasta pagina!",
   "NavBar": {
     "Dashboard": "Panou central",
