--- a/public/static/locales/en/translations.json
+++ b/public/static/locales/en/translations.json
@@ -12,6 +12,7 @@
   "DECIMAL2": "{{number,intlDecimal2}}",
   "MyProfile": "My Profile",
   "Toate Concediile": "All Holidays",
+  "HolidaysMenu":"Holidays Menu",
   "Forbidden": "Not allowed to see this page!",
   "NavBar": {
     "Dashboard": "Dashboard",
