--- a/public/static/locales/en/translations.json
+++ b/public/static/locales/en/translations.json
@@ -14,6 +14,7 @@
   "Forbidden": "Not allowed to see this page!",
   "NavBar": {
     "Dashboard": "Dashboard",
+    "NewEmployee": "New Employee",
     "Settings": "Settings",
     "Privacy": "Privacy",
     "Security": "Security"
