--- a/public/static/locales/ro/translations.json
+++ b/public/static/locales/ro/translations.json
@@ -6,6 +6,7 @@
   "Forbidden": "Nu aveti dreptul sa vedeti aceasta pagina!",
   "NavBar": {
     "Dashboard": "Panou central",
+    "NewEmployee": "Angajat Nou",
     "Settings": "Setari",
     "Privacy": "Confidentialitate",
     "Security": "Securitate"
