--- a/public/static/locales/ro/translations.json
+++ b/public/static/locales/ro/translations.json
@@ -3,8 +3,9 @@
   "RowsOf": "din",
   "RowsPerPage": "Randuri pe pagina",
   "MyProfile": "Profilul meu",
-  "HolidaysMenu":"Meniu Concedii",
+  "HolidaysMenu": "Meniu Concedii",
   "Toate Concediile": "Toate Concediile",
+  "Cerere Concediu": "Cerere Concediu",
   "Forbidden": "Nu aveti dreptul sa vedeti aceasta pagina!",
   "NavBar": {
     "Dashboard": "Panou central",
