--- a/public/static/locales/en/translations.json
+++ b/public/static/locales/en/translations.json
@@ -12,7 +12,8 @@
   "DECIMAL2": "{{number,intlDecimal2}}",
   "MyProfile": "My Profile",
   "Toate Concediile": "All Holidays",
-  "HolidaysMenu":"Holidays Menu",
+  "HolidaysMenu": "Holidays Menu",
+  "Cerere Concediu": "Leave Request",
   "Forbidden": "Not allowed to see this page!",
   "NavBar": {
     "Dashboard": "Dashboard",
