--- a/public/static/locales/en/translations.json
+++ b/public/static/locales/en/translations.json
@@ -76,15 +76,31 @@
     "Image": "Image",
     "LastName": "Last Name",
     "FirstName": "First Name",
-    "CNP": "Identification number",
-    "Series": "Series",
-    "CardNumber": "Card number",
+    "CNP": "National Identity Card",
+    "Series": "Identity Card Series",
+    "CardNumber": "Identity Card Number",
     "Email": "Email",
-    "DateOfBirth": "Date of birth",
-    "PhoneNumber": "Phone number",
-    "DateOfEmployment": "Date of employment",
+    "DateOfBirth": "Date of Birth",
+    "PhoneNumber": "Phone Number",
+    "DateOfEmployment": "Date of Employment",
     "Department": "Department",
     "Function": "Function",
     "Update": "Update"
+  },
+  "NewEmployeeTranslations": {
+    "AddNewEmployee": "AddNewEmployee",
+    "LastName": "Last Name",
+    "FirstName": "First Name",
+    "NationalIdentityCard": "National Identity Card",
+    "IdentityCardSeries": "Identity Card Series",
+    "IdentityCardNumber": "Identity Card Number",
+    "Email": "Email",
+    "PhoneNumber": "Phone Number",
+    "DateofEmployment": "Date of Employment",
+    "DateofBirth": "Date of Birth",
+    "Department": "Department",
+    "Function": "Function",
+    "Password": "Password",
+    "SaveEmployee": "Save"
   }
 }
