--- a/public/static/locales/ro/translations.json
+++ b/public/static/locales/ro/translations.json
@@ -90,7 +90,7 @@
     "IdentityCardNumber": "Numar",
     "Email": "Email",
     "PhoneNumber": "Telefon",
-    "DateofEmployment": "Data angajarii",
+    "DateofEmployment": "Data angajare",
     "DateofBirth": "Data nasterii",
     "Department": "Departament",
     "Function": "Functie",
