--- a/public/static/locales/ro/translations.json
+++ b/public/static/locales/ro/translations.json
@@ -15,7 +15,8 @@
     "Employees": "Angajati",
     "Settings": "Setari",
     "Privacy": "Confidentialitate",
-    "Security": "Securitate"
+    "Security": "Securitate",
+    "Delogare": "Delogare"
   },
   "Tooltips": {
     "Logout": "Iesire",
